--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="column-right">
             <div class="text">I'm Suraj Chamlagain and I'm a student.</div>
             <p>Currently pursuing my degree in Computer Science, I have developed a passion for cyber security to contributing the development of cyber security measures policy and protocols providing a secure environment. My journey so far has involved learning various programming languages, understanding algorithms, and working on exciting school providing computer projects for cyber security that challenge my analytical skills. I believe in continuous learning and strive to keep myself updated with the latest advancements in the field.</p>
-            <p>Aside from academics, I enjoy participating in extracurricular activities that help in my overall development. Being part of coding clubs and hackathons has not only honed my technical skills but also improved my ability to work in teams, manage time effectively, and communicate ideas clearly.</p>
+          <br>  <p>Aside from academics, I enjoy participating in extracurricular activities that help in my overall development. Being part of coding clubs and hackathons has not only honed my technical skills but also improved my ability to work in teams, manage time effectively, and communicate ideas clearly.</p>
 
     </div>
 </div>
