--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h2 class="title"> About me </h2>
         <div class="about-content">
         <div class="column-left">
-            <img src="/about.jpg" alt="">
+            <img src="IMG-20240306-WA0013-01-01.jpeg.jpg" alt="">
         </div>
         
         <div class="column-right">
